--- a/hooks/bidi-hook/docroot/WEB-INF/src/content/Language_fa.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/src/content/Language_fa.properties
@@ -4446,3 +4446,4 @@ copy-portlets-from-page=\u06a9\u067e\u06cc \u067e\u0631\u062a\u0644\u062a\u200c\
 other-languages=\u0633\u0627\u06cc\u0631 \u0632\u0628\u0627\u0646\u200c\u0647\u0627
 javax.portlet.title.169 = \u0646\u0645\u0627\u06cc\u0634 \u062f\u0627\u062f\u0647\u200c\u0647\u0627\u06cc \u067e\u0648\u06cc\u0627
 javax.portlet.title.175=\u0645\u062d\u062a\u0648\u06cc \u0645\u0631\u062a\u0628\u0637
+display-page=\u0635\u0641\u062d\u0647 \u0646\u0645\u0627\u06cc\u0634
