--- a/hooks/bidi-hook/docroot/WEB-INF/src/content/Language_fa.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/src/content/Language_fa.properties
@@ -2733,7 +2733,7 @@ time-zone-range=Time Zone Range
 currency.XOF=CFA Franc
 members-to-invite=Members to Invite
 the-browser's-user-agent=The browser's user agent
-action.MANAGE_LAYOUTS=\u0645\u062f\u06cc\u0631\u06cc\u062a \u0644\u0627\u06cc\u0647 \u0646\u0645\u0627\u06cc\u0634
+action.MANAGE_LAYOUTS=\u0645\u062f\u06cc\u0631\u06cc\u062a \u0686\u06cc\u062f\u0645\u0627\u0646 \u0635\u0641\u062d\u0647
 analytics=Analytics (Automatic Copy)
 are-you-sure-you-want-to-delete-this-category=\u0622\u064a\u0627 \u0645\u0637\u0645\u0626\u0646 \u0647\u0633\u062a\u064a\u062f \u06a9\u0647 \u0645\u06cc \u062e\u0648\u0627\u0647\u064a\u062f \u0627\u064a\u0646 \u0637\u0628\u0642\u0647 \u0628\u0646\u062f\u06cc \u0631\u0627 \u062d\u0630\u0641 \u06a9\u0646\u064a\u062f\u061f
 are-you-sure-you-want-to-delete-this-field-and-all-its-children=Are you sure you want to delete this field and all its children?
