--- a/hooks/bidi-hook/docroot/WEB-INF/src/content/Language_fa.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/src/content/Language_fa.properties
@@ -6,7 +6,7 @@ wide=\u067e\u0647\u0646
 searchable=\u0642\u0627\u0628\u0644 \u062c\u0633\u062a\u062c\u0648
 enter-one-screen-name-per-line-to-reserve-the-screen-name=Enter one screen name <b>per line</b> to reserve the screen name.
 create-account=\u0627\u064a\u062c\u0627\u062f \u062d\u0633\u0627\u0628 \u06a9\u0627\u0631\u0628\u0631\u06cc
-change-layout=\u062a\u063a\u064a\u064a\u0631 \u0644\u0627\u064a\u0647 \u0646\u0645\u0627\u064a\u0634
+change-layout=\u062a\u063a\u064a\u064a\u0631 \u0686\u06cc\u062f\u0645\u0627\u0646 \u0635\u0641\u062d\u0647
 database.sqlserver=SQLServer (Automatic Copy)
 html-format=\u0641\u0631\u0645\u062a HTML
 add-child-category=\u0627\u0636\u0627\u0641\u0647 \u06a9\u0631\u062f\u0646 \u0632\u06cc\u0631\u0634\u0627\u062e\u0647
@@ -425,7 +425,7 @@ the-screen-name-you-requested-is-reserved=The screen name you requested is reser
 common-items=Common Items (Automatic Copy)
 reset-failure-count-help=This determines the amount of time that a record of failed logins is kept for the user.
 group.statistics.config.asset.replies=replies to This site's message board posts (Automatic Copy)
-page-layout=\u062a\u063a\u064a\u064a\u0631 \u0644\u0627\u064a\u0647 \u0646\u0645\u0627\u064a\u0634
+page-layout=\u062a\u063a\u064a\u064a\u0631 \u0686\u06cc\u062f\u0645\u0627\u0646 \u0635\u0641\u062d\u0647
 allow-users-to-request-forgotten-passwords=\u0627\u062c\u0627\u0632\u0647 \u062f\u0631\u062e\u0648\u0627\u0633\u062a \u067e\u0633\u0648\u0631\u062f \u0641\u0631\u0627\u0645\u0648\u0634 \u0634\u062f\u0647
 enter-one-plugin-package-id-per-line=Enter one plugin package ID <b>per line</b>.
 es_en=\u0627\u0633\u067e\u0627\u0646\u064a\u0627\u064a\u06cc \u0628\u0647 \u0627\u0646\u06af\u0644\u064a\u0633\u06cc
@@ -1982,7 +1982,7 @@ cubit=Cubit
 shard-name=\u0646\u0627\u0645 \u06a9\u0648\u062a\u0627\u0647
 schedule-event=Schedule Event
 month-s=\u0645\u0627\u0647
-please-enter-a-valid-layout-name=\u0644\u0637\u0641\u0627 \u064a\u06a9 \u0646\u0627\u0645 \u0644\u0627\u064a\u0647 \u0646\u0645\u0627\u064a\u0634 \u0645\u062c\u0627\u0632 \u0648\u0627\u0631\u062f \u06a9\u0646\u064a\u062f.
+please-enter-a-valid-layout-name=\u0644\u0637\u0641\u0627 \u064a\u06a9 \u0646\u0627\u0645 \u0686\u06cc\u062f\u0645\u0627\u0646 \u0635\u0641\u062d\u0647 \u0645\u062c\u0627\u0632 \u0648\u0627\u0631\u062f \u06a9\u0646\u064a\u062f.
 greeting=\u067e\u064a\u0627\u0645 \u062e\u0648\u0634 \u0622\u0645\u062f
 your-new-email-address-is-x=\u0622\u062f\u0631\u0633 \u062c\u062f\u064a\u062f \u0627\u064a\u0645\u064a\u0644 \u0634\u0645\u0627 {0}.
 pages-with-x-x=Pages with {0} <em>{1}</em>.
@@ -2733,7 +2733,7 @@ time-zone-range=Time Zone Range
 currency.XOF=CFA Franc
 members-to-invite=Members to Invite
 the-browser's-user-agent=The browser's user agent
-action.MANAGE_LAYOUTS=\u0645\u062f\u06cc\u0631\u06cc\u062a \u0686\u06cc\u062f\u0645\u0627\u0646 \u0635\u0641\u062d\u0647
+action.MANAGE_LAYOUTS=\u0645\u062f\u06cc\u0631\u06cc\u062a
 analytics=Analytics (Automatic Copy)
 are-you-sure-you-want-to-delete-this-category=\u0622\u064a\u0627 \u0645\u0637\u0645\u0626\u0646 \u0647\u0633\u062a\u064a\u062f \u06a9\u0647 \u0645\u06cc \u062e\u0648\u0627\u0647\u064a\u062f \u0627\u064a\u0646 \u0637\u0628\u0642\u0647 \u0628\u0646\u062f\u06cc \u0631\u0627 \u062d\u0630\u0641 \u06a9\u0646\u064a\u062f\u061f
 are-you-sure-you-want-to-delete-this-field-and-all-its-children=Are you sure you want to delete this field and all its children?
@@ -4302,7 +4302,7 @@ registration-property-name-and-description-are-required=Registration property na
 apply-add-on=Apply Add-on (Automatic Copy)
 print-x-x=Print <span class\="{0}">{1}</span> (Automatic Copy)
 are-you-sure-you-want-to-delete-the-scheduled-event=Are you sure you want to delete the scheduled event?
-manage=\u0645\u062f\u06cc\u0631
+manage=\u0645\u062f\u06cc\u0631\u06cc\u062a
 include-all-children-pages=Include all children pages.
 num-of-participants=\u062a\u0639\u062f\u0627\u062f \u0634\u0631\u06a9\u062a \u06a9\u0646\u0646\u062f\u06af\u0627\u0646
 posted-on-x=\u0627\u0631\u0633\u0627\u0644 \u0634\u062f\u0647 \u062f\u0631 {0}.
@@ -4561,7 +4561,7 @@ shopping=\u062e\u0631\u064a\u062f
 up=\u0628\u0627\u0644\u0627
 change-required=Change Required
 as-keyword=As Keyword (Automatic Copy)
-modify-layout=\u062a\u063a\u064a\u064a\u0631 \u0644\u0627\u064a\u0647 \u0646\u0645\u0627\u064a\u0634
+modify-layout=\u062a\u063a\u064a\u064a\u0631 \u0686\u06cc\u062f\u0645\u0627\u0646 \u0635\u0641\u062d\u0647
 tasks=\u06a9\u0627\u0631\u0647\u0627
 never-expire=\u0647\u064a\u0686\u06af\u0627\u0647 \u0645\u0646\u0642\u0636\u06cc \u0646\u0634\u0648\u062f
 join-room=\u0648\u0631\u0648\u062f \u0628\u0647 \u0627\u062a\u0627\u0642
@@ -4930,7 +4930,7 @@ by-screen-name=\u0628\u0627 \u0646\u0627\u0645 \u0646\u0645\u0627\u06cc\u0634\u0
 structure-name=Structure Name (Automatic Copy)
 edit-options=\u0648\u064a\u0631\u0627\u064a\u0634 \u0645\u0646\u0637\u0642\u0647
 portlet=\u067e\u0631\u062a\u0644\u062a
-are-you-sure-you-want-to-delete-this-layout-and-all-of-its-children=\u0622\u064a\u0627 \u0645\u0637\u0645\u0626\u0646 \u0647\u0633\u062a\u064a\u062f \u06a9\u0647 \u0645\u06cc \u062e\u0648\u0627\u0647\u064a\u062f \u0627\u064a\u0646 \u0644\u0627\u064a\u0647 \u0646\u0645\u0627\u064a\u0634 \u0631\u0627 \u062d\u0630\u0641 \u06a9\u0646\u064a\u062f\u061f
+are-you-sure-you-want-to-delete-this-layout-and-all-of-its-children=\u0622\u064a\u0627 \u0645\u0637\u0645\u0626\u0646 \u0647\u0633\u062a\u064a\u062f \u06a9\u0647 \u0645\u06cc \u062e\u0648\u0627\u0647\u064a\u062f \u0627\u064a\u0646 \u0686\u06cc\u062f\u0645\u0627\u0646 \u0635\u0641\u062d\u0647 \u0631\u0627 \u062d\u0630\u0641 \u06a9\u0646\u064a\u062f\u061f
 add-instance=Add Instance
 image-position-from-the-left=Image Position From the Left
 all-discount-types=\u0647\u0645\u06c0 \u0627\u0646\u0648\u0627\u0639 \u062a\u062e\u0641\u06cc\u0641
