--- a/hooks/bidi-hook/docroot/WEB-INF/classes/content/Language_fa.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/classes/content/Language_fa.properties
@@ -4011,7 +4011,7 @@ no-files-selected=No files selected. (Automatic Copy)
 footer-web-content=\u067e\u0627\u0646\u0648\u06cc\u0633 \u0645\u062d\u062a\u0648\u06cc \u0635\u0641\u062d\u0647
 you-do-not-have-any-websites=You do not have any websites.
 kill-session=Kill Session
-site-pages=Site Pages (Automatic Copy)
+site-pages=\u0635\u0641\u062d\u0647\u200c\u0647\u0627\u06cc \u0633\u0627\u06cc\u062a
 add-package=\u0627\u0636\u0627\u0641\u0647 \u06a9\u0631\u062f\u0646 \u0628\u0633\u062a\u0647
 database.mysql=MySQL (Automatic Copy)
 the-new-thread-can-be-found-at-x=The new thread can be found at {0}.
