--- a/hooks/bidi-hook/docroot/WEB-INF/classes/content/Language_fa.properties
+++ b/hooks/bidi-hook/docroot/WEB-INF/classes/content/Language_fa.properties
@@ -2817,7 +2817,7 @@ action.VIEW_ALL_TASKS=View All Tasks (Automatic Copy)
 action.DEFINE_PERMISSIONS=\u062a\u0639\u0631\u06cc\u0641 \u0645\u062c\u0648\u0632
 edit-tag-set-permissions=\u0648\u06cc\u0631\u0627\u06cc\u0634 \u0645\u062c\u0648\u0632\u0647\u0627\u06cc \u0645\u062c\u0645\u0648\u0639\u0647 \u0628\u0631\u0686\u0633\u0628
 cut-and-paste-the-full-url-to-use-as-a-hyperlink=\u0622\u062f\u0631\u0633 \u0627\u064a\u0646\u062a\u0631\u0646\u062a\u06cc \u06a9\u0627\u0645\u0644 \u0631\u0627 \u0627\u0646\u062a\u062e\u0627\u0628 \u06a9\u0646\u064a\u062f \u0628\u0639\u0646\u0648\u0627\u0646 \u0644\u064a\u0646\u06a9\:
-page-customizations=Page Customizations (Automatic Copy)
+page-customizations=\u0645\u062d\u062f\u0648\u062f\u0647\u200c\u0647\u0627\u06cc \u0648\u06cc\u0631\u0627\u06cc\u0634
 metadata.XMPDM.KEY=Key (Automatic Copy)
 props=Props
 please-enter-only-alpha-characters=Please enter only alpha characters. (Automatic Copy)
@@ -3013,7 +3013,7 @@ forbidden=Forbidden
 proposal-description=Proposal Description
 metadata.TikaMimeKeys.TIKA_MIME_FILE=MIME File (Automatic Copy)
 my-products=\u0645\u062d\u0635\u0648\u0644\u0627\u062a \u0645\u0646
-site-memberships=Site Memberships (Automatic Copy)
+site-memberships=\u0639\u0636\u0648\u06cc\u062a\u200c\u0647\u0627\u06cc \u0633\u0627\u06cc\u062a
 this-database-is-useful-for-development-and-demo'ing-purposes=This database is useful for development and demo'ing purposes, but it is not recommended for production use. (Automatic Copy)
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=\u0627\u06af\u0631 SKU \u0645\u062d\u0635\u0648\u0644 \u0628\u0631\u0627\u06cc \u06a9\u0648\u067e\u0646 \u0686\u06a9 \u0646\u0645\u06cc \u0634\u0648\u062f\u060c \u0627\u064a\u0646 \u0642\u0633\u0645\u062a \u0631\u0627 \u062e\u0627\u0644\u06cc \u0628\u06af\u0630\u0627\u0631\u064a\u062f.
 history-count-help=This determines the number of previous passwords to keep in the history.
